fix(ui): minor changes to back button spacing

--- a/src/content/styles/modules/_content-pane.scss
+++ b/src/content/styles/modules/_content-pane.scss
@@ -23,6 +23,8 @@
             }
 
             @include media($rv-sm...) {
+                padding-left: 50px;
+
                 .rv-close {
                     position: absolute;
                     left: 5px;
